# Perfect-Hashing

./: .gitignore  CMakeLists.txt  a.out  main.cpp  visualization.ipynb
hash-function/: HashFunction.h  MultiplyShiftHash.h  SplitMixHash.h  StdHash.h
interator/: Iterator.h  StepIterator.h
output/: Chaining Set.csv  Perfect Hashing Set.csv  Red Black Tree Set.csv
random-gen/: PseudoRandomGen.h  RandomGen.h
set/: ChainingSet.h  PerfectHashingSet-neutral.h  PerfectHashingSet.h  RedBlackTreeSet.h  Set.h
test/: SetTester.h
